--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                   <a href="index.html">Inicio</a>
                   <a href="ubicacion.html">Ubícanos</a>
                   <a href="opiniones.html">Opiniones</a>
-                  <a href="#" class="item"><i class="fa-solid fa-user"></i> Iniciar Sesión</a>
+                  <hr class="menu-hr" noshade="">
+                  <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> Iniciar Sesión</button></a>
             </div>
       </nav>
 
