menu-hamburguesa incmpleto

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                               saludable a base de productos locales, cargados de lo mejor de la tradición colombiana.
 
                         </p></div>
-                        <div id="hijo"><img src="img/p1.jpgimg/Hotelia negro vertical.svg" alt="logo"></div>
+                        <div id="hijo"><img src="img/Hotelia negro vertical.svg" alt="logo"></div>
                   </div>
             </section>
 
