--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
                         </div>
                         
                         <div class="cerrar">
-                              <a href=""><i class="fa-solid fa-arrow-right-from-bracket" id="menu"></i><p>Cerrar Sesion</p></a>
+                              <a href="index.html"><i class="fa-solid fa-arrow-right-from-bracket" id="menu"></i><p>Cerrar Sesion</p></a>
                         </div>
                   </div>              
             </section>
