--- a/login.html
+++ b/login.html
@@ -14,7 +14,9 @@
             <a href=""><img src="img/Hotelia horizontal negro.svg"></a>
         </div>
         <div class="login">
-            <i class="fa-solid fa-user"></i>
+            <div class="persona">
+                <i class="fa-solid fa-user"></i>
+            </div>
             <form action="#">
                 <div class="iniciosesion">
                     <label for="">Usuario</label>
@@ -24,8 +26,8 @@
                     <label for="">Contraseña</label>
                     <input type="text">
                 </div>
-                <button id="boton">Ingresar</button>
-                <p>¿No tienes una cuenta?<a href="#">Regístrate aquí.</a> </p>
+                <button id="boton"><a href="dashboard.html">Ingresar</a></button>
+                <p>¿No tienes una cuenta?<a href="registro.html">Regístrate aquí.</a> </p>
             </form>
         </div>
     </section>
