--- a/login.html
+++ b/login.html
@@ -18,11 +18,11 @@
                 <i class="fa-solid fa-user"></i>
             </div>
             <form action="#">
-                <div class="iniciosesion">
+                <div class="form-login">
                     <label for="">Usuario</label>
                     <input type="text">
                 </div>
-                <div class="iniciosesion">
+                <div class="form-login">
                     <label for="">Contraseña</label>
                     <input type="text">
                 </div>
